--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -11,6 +11,7 @@
   <string name="beta_message">Danke, dass du Beta Tester bist. Falls du irgendwelche Probleme bekommen solltest, zögere bitte nicht, mich zu kontaktieren. Momentan benutzt du Version %s.</string>
   <string name="apply_on_boot">Beim Systemstart anwenden</string>
   <string name="apply_on_boot_finished">Deine Änderungen wurden übernommen</string>
+  <string name="apply_on_boot_time">Anwenden der Einstellungen in %d Sekunden</string>
   <string name="apply_on_boot_enabled">Aktiviere beim Booten für %s Abschnitt</string>
   <string name="apply_on_boot_disabled">Deaktiviere beim Booten für %s Abschnitt</string>
   <string name="apply_on_boot_failed">Fehler beim Anwenden von Einstellungen beim Booten</string>
@@ -40,10 +41,10 @@
   <string name="low_memory_killer">Low Memory Killer</string>
   <string name="virtual_memory">Virtueller Speicher</string>
   <string name="misc_controls">Verschiedene Einstellungen</string>
-  <string name="build_prop_editor">Build prop-Bearbeiter</string>
-  <string name="profile">Profil</string>
+  <string name="build_prop_editor">Build.prop Editor</string>
+  <string name="profile">Profile</string>
   <string name="settings">Einstellungen</string>
-  <string name="faq">FAQ (Häufig gestellte Fragen)</string>
+  <string name="faq">FAQ's (Häufig gestellte Fragen)</string>
   <string name="about_us">Über uns</string>
   <string name="unused_cpu_states">Ungenutzte CPU-Stadien</string>
   <string name="uptime">Laufzeit</string>
@@ -70,8 +71,8 @@
   <string name="cpu_governor_tunables_summary">Unterschiedliche Konfigurationen, die vom Governor abhängig sind.</string>
   <string name="not_tunable">%s ist nicht einstellbar</string>
   <string name="mc_power_saving">Energiesparmodus für Mehrkernprozessoren</string>
-  <string name="mc_power_saving_summary">Gruppiert die Aufgaben möglichst wenigen Kernen zu.</string>
-  <string name="cfs_scheduler_policy">Richtlinie für den CFS-Planer</string>
+  <string name="mc_power_saving_summary">Ordnet die Aufgaben möglichst wenigen Kernen zu.</string>
+  <string name="cfs_scheduler_policy">Richtlinien für den CFS-Scheduler</string>
   <string name="disabled">Deaktiviert</string>
   <string name="enabled">Aktiviert</string>
   <string name="aggressive">Aggressiv</string>
@@ -81,16 +82,16 @@
   <string name="debug_mask">Debug-Mask</string>
   <string name="debug_mask_summary">Erlaubt dir, Debug-Mask für CPU-Boost-Operationen zu aktivieren.</string>
   <string name="interval">Intervall</string>
-  <string name="interval_summary">Minimale Zeit die ein CPU beschleunigt wird.</string>
+  <string name="interval_summary">Minimale Zeit der CPU-Boost Beschleunigung.</string>
   <string name="sync_threshold">Sync-Schwellwert</string>
-  <string name="sync_threshold_summary">Wenn CPU-Belastung den voreingestellten Schwellenwert überschreitet, wird die aktuelle CPU auf diese Frequenz angehoben.</string>
+  <string name="sync_threshold_summary">Wenn die CPU-Belastung den voreingestellten Schwellenwert überschreitet, wird die aktuelle CPU auf diese Frequenz angehoben.</string>
   <string name="input_interval">Eingabe-Intervall</string>
-  <string name="input_interval_summary">Minimales Intervall wann eine CPU geboosted wird, wenn eine Eingabe erfolgt.</string>
-  <string name="input_boost_freq">Eingabe Boost Frequenz</string>
-  <string name="input_boost_freq_summary">CPU-Frequenz wird bei Berührungen auf dem Bildschirm auf diesen Wert gesetzt.</string>
-  <string name="global_offset">Globale Versetzung</string>
+  <string name="input_interval_summary">Minimales Intervall des CPU-Boost, wenn eine Eingabe erfolgt.</string>
+  <string name="input_boost_freq">Eingabe CPU-Boost Frequenz</string>
+  <string name="input_boost_freq_summary">Die CPU-Frequenz wird bei Berühren des Bildschirms auf diesen Wert gesetzt.</string>
+  <string name="global_offset">Globaler Offset</string>
   <string name="mpdecision">MPDecision</string>
-  <string name="mpdecision_summary">QCOMs Hotplugging Lösung. Sie werden wahrscheinlich Schwierigkeiten mit der Änderung der Frequenzen feststellen, wenn diese Funktion aktiv ist.</string>
+  <string name="mpdecision_summary">QCOMs Hotplug Lösung. Sie werden wahrscheinlich Schwierigkeiten mit der Änderung der Frequenzen feststellen, wenn diese Funktion aktiv ist.</string>
   <string name="intelliplug">IntelliPlug</string>
   <string name="intelliplug_summary">Ein Kernel-Ersatz für Qualcomms MPDecision. Von faux123 entwickelt.</string>
   <string name="profile_summary">Die Zahl in Klammern zeigt die Kerne die jederzeit online sind.</string>
@@ -107,13 +108,13 @@
   <string name="touch_boost">Touch-Boost</string>
   <string name="touch_boost_summary">Dies wird Ihre minimale CPU-Geschwindigkeit erhöhen, wenn Sie auf den Touchscreen oder eine Taste drücken.</string>
   <string name="hysteresis">Hysteresewert</string>
-  <string name="hysteresis_summary">Je niedriger es ist, desto schneller reagiert es.</string>
+  <string name="hysteresis_summary">Je niedriger der Wert ist, desto schneller reagiert es.</string>
   <string name="threshold">Schwellwert</string>
   <string name="debug">Fehlersuche</string>
   <string name="debug_summary">Erlaubt Debug-Maske für Operationen zu aktivieren.</string>
   <string name="suspend">Ruhezustand</string>
   <string name="suspend_summary">Ruhezustand verhindern.</string>
-  <string name="cpus_boosted">CPUs erhöht</string>
+  <string name="cpus_boosted">Boosted CPUs</string>
   <string name="cpus_boosted_summary">Maximale Anzahl der CPUs, die sich zur gleichen Zeit steigern.</string>
   <string name="min_cpu_online">Minimal CPU Online</string>
   <string name="min_cpu_online_summary">Minimale Anzahl der immer laufenden CPUs.</string>
@@ -128,7 +129,7 @@
   <string name="blu_plug_summary">Ein Kernel-Ersatz für Qualcomms MPDecision. Von Code_Blue Team entwickelt.</string>
   <string name="powersaver_mode">Energiesparmodus</string>
   <string name="powersaver_mode_summary">1 CPU Maximal Online die mit der Frequenz @1728 MHz arbeitet.</string>
-  <string name="up_threshold">Oberer Schwellenwert</string>
+  <string name="up_threshold">Oberer Schwellwert</string>
   <string name="up_timer_cnt">Timer-Steuerelement</string>
   <string name="msm_hotplug">MSM Hotplug</string>
   <string name="msm_hotplug_summary">Ein Kernel-Ersatz für Qualcomms MPDecision. Von faux123 entwickelt.</string>
@@ -141,9 +142,9 @@
   <string name="mako_hotplug">Mako Hotplug</string>
   <string name="mako_hotplug_summary">Ein Kernel-Ersatz für Qualcomms MPDecision. Von Franciscofranco entwickelt.</string>
   <string name="cores_on_touch">Kerne während einer Eingabe</string>
-  <string name="cores_on_touch_summary">Anzahl der CPUs die online bleiben, indem der Bildschirm oder eine Taste berührt wird.</string>
+  <string name="cores_on_touch_summary">Anzahl der CPUs die online bleiben, wenn der Bildschirm oder eine Taste berührt wird.</string>
   <string name="first_level">Erste Ebene</string>
-  <string name="high_load_counter">Hochlast-Counter</string>
+  <string name="high_load_counter">Hochlast-Zähler</string>
   <string name="timer">Timer</string>
   <string name="msm_mpdecision_hotplug">MSM MPDecision Hotplug</string>
   <string name="bricked_hotplug">Bricked Hotplug</string>
@@ -156,7 +157,7 @@
   <string name="delay">Verzögerung</string>
   <string name="delay_summary">Zeit zwischen den Kontrollen.</string>
   <string name="pause">Pause</string>
-  <string name="alucard_hotplug_summary">Alternative zu Qualcomm\'s MPDecision (von Alucard).</string>
+  <string name="alucard_hotplug_summary">Alternative zu Qualcomms MPDecision (von Alucard).</string>
   <string name="cpu_down_rate">CPU-Down Rate</string>
   <string name="cpu_up_rate">CPU-Up Rate</string>
   <string name="gpu_2d_cur_freq">Aktuelle GPU 2D-Frequenz</string>
@@ -179,18 +180,18 @@
   <string name="min_rgb">Minimaler RGB-Wert</string>
   <string name="invert_screen">Bildschirm invertieren</string>
   <string name="saturation_intensity">Sättigungs-Intensität</string>
-  <string name="grayscale_mode">\"Graustufen\"-Modus</string>
+  <string name="grayscale_mode">Graustufen-Modus</string>
   <string name="screen_hue_summary">Du erhälst möglichweise Probleme mit dem MSM8x26 SoC wenn du einen hohen Wert setzt.</string>
   <string name="screen_contrast">Bildschirmkontrast</string>
   <string name="gamma">Gamma</string>
   <string name="gamma_profile">Gamma-Profil</string>
-  <string name="red_whites">Rot-weißen</string>
-  <string name="green_greys">Grün-grauen</string>
-  <string name="green_blacks">Grün-schwarzen</string>
-  <string name="green_whites">Grün-weißen</string>
-  <string name="blue_greys">Blau-grauen</string>
-  <string name="blue_blacks">Blau-schwarze</string>
-  <string name="blue_whites">Blau-weißen</string>
+  <string name="red_whites">Rot-Weiß</string>
+  <string name="green_greys">Grün-Grau</string>
+  <string name="green_blacks">Grün-Schwarz</string>
+  <string name="green_whites">Grün-Weiß</string>
+  <string name="blue_greys">Blau-Grau</string>
+  <string name="blue_blacks">Blau-Schwarz</string>
+  <string name="blue_whites">Blau-Weiß</string>
   <string name="contrast">Kontrast</string>
   <string name="brightness">Helligkeit</string>
   <string name="red_positive">Rot Positiv</string>
@@ -200,11 +201,11 @@
   <string name="blue_positive">Blau Positiv</string>
   <string name="blue_negative">Blau Negativ</string>
   <string name="white_point">Weißpunkt</string>
-  <string name="gamma_profile_summary">Nach Auswahl eines Profils, Bitte schalten Sie Ihren Bildschirm aus und wieder ein.</string>
+  <string name="gamma_profile_summary">Nach Auswahl eines Profils, bitte den Bildschirm aus- und wieder einschalten.</string>
   <string name="min_brightness">Minimale Helligkeit</string>
   <string name="min_brightness_summary">Erlaubt, die Helligkeit des Bildschirms niedriger als gewöhnlich einzustellen.</string>
   <string name="backlight_dimmer">Hintergrundbeleuchtungs-Dimmer</string>
-  <string name="dt2w">Doppelt Tippen zum Aufwecken</string>
+  <string name="dt2w">Doppeltes Tippen zum Aufwecken</string>
   <string name="dt2w_summary">Wacht ihr Gerät durch doppeltes Antippen des Bildschirms ein.</string>
   <string name="center">Mittig</string>
   <string name="full">Vollständig</string>
@@ -212,25 +213,25 @@
   <string name="top_half">Obere Hälfte</string>
   <string name="fullscreen">Vollbildschirm</string>
   <string name="s2w">Wischen zum Aufwecken</string>
-  <string name="s2w_summary">Wecke dein Gerät durch swipen auf dem Bildschirm.</string>
+  <string name="s2w_summary">Wecke dein Gerät durch Wischen auf dem Bildschirm.</string>
   <string name="s2s">Wischen, um den Bildschirm zu sperren</string>
   <string name="t2w">Tippen zum Aufwecken</string>
-  <string name="t2w_summary">Wecke dein Gerät auf, indem du auf den Touchscreen tippst.</string>
-  <string name="dt2w_s2w_charging">DoubleTap2Wake + Sweep 2Wake während des Ladens</string>
+  <string name="t2w_summary">Wecke das Gerät auf, indem du auf den Touchscreen tippst.</string>
+  <string name="dt2w_s2w_charging">DoubleTap2Wake + Sweep2Wake während des Ladens</string>
   <string name="power_key_suspend">Power-Taste unterbrechen</string>
   <string name="power_key_suspend_summary">Diese Einstellung wird Wake-Steuerelemente deaktivieren, wenn der Bildschirm durch die Power-Taste ausgeschaltet wird.</string>
   <string name="sound_control">Lautstärken-Kontrolle</string>
   <string name="headphone_gain">Kopfhörer Steigerung</string>
-  <string name="handset_microphone_gain">Handset Mikrofon Steigerung</string>
-  <string name="cam_microphone_gain">Camcorder-Mikrofon-Verstärkung</string>
-  <string name="speaker_gain">Lautsprecher Steigerung</string>
-  <string name="headphone_poweramp_gain">Kopfhörer PowerAmp Steigerung</string>
+  <string name="handset_microphone_gain">Telefon-Mikrofon Verstärkung</string>
+  <string name="cam_microphone_gain">Kamera-Mikrofon Verstärkung</string>
+  <string name="speaker_gain">Lautsprecher Verstärkung</string>
+  <string name="headphone_poweramp_gain">Kopfhörer PowerAmp Verstärkung</string>
   <string name="battery_voltage">Akku-Spannung</string>
   <string name="battery_level">Akkustand</string>
   <string name="battery_temperature">Akku-Temperatur</string>
-  <string name="usb_fast_charge">Schnelleres Laden via USB</string>
-  <string name="usb_fast_charge_summary">Das Gerät lädt schneller, falls verbunden via USB.</string>
-  <string name="blx">Akkulaufzeit eXtender</string>
+  <string name="usb_fast_charge">Schnelles Laden via USB</string>
+  <string name="usb_fast_charge_summary">Das Gerät lädt schneller, falls per USB verbunden.</string>
+  <string name="blx">Akkulaufzeit Extender</string>
   <string name="internal_storage">Interner Speicher</string>
   <string name="external_storage">Externer Speicher</string>
   <string name="scheduler">Scheduler</string>
@@ -244,27 +245,27 @@
   <string name="ksm_pages_unshared">Ungeteilte Seiten</string>
   <string name="ksm_pages_volatile">Flüchtige Seiten</string>
   <string name="ksm_enable">KSM aktivieren</string>
-  <string name="ksm_enable_summary">Reduziert den Speicherverbrauch, hat aber Auswirkungen auf die CPU-Auslastung.</string>
+  <string name="ksm_enable_summary">Reduziert den Speicherverbrauch, erhöht aber die CPU-Auslastung.</string>
   <string name="ksm_pages_to_scan">Zu scannende Seiten</string>
   <string name="ksm_sleep_milliseconds">Schlafen zwischen den Scans</string>
   <string name="ksm_deferred_timer">Aussetzende Timer</string>
   <string name="foreground_app">Anwendungen im Vordergrund</string>
   <string name="visible_app">Sichtbare Anwendungen</string>
-  <string name="secondary_server">Hintergrund Applikationen</string>
+  <string name="secondary_server">Hintergrund Anwendungen</string>
   <string name="hidden_app">Versteckte Anwendungen</string>
   <string name="content_providers">Inhaltsversorger</string>
   <string name="empty_app">Leere Anwendungen</string>
-  <string name="very_light">Sehr leicht</string>
+  <string name="very_light">Sehr niedrig</string>
   <string name="light">Niedrig</string>
   <string name="medium">Mittel</string>
   <string name="very_aggressive">Sehr aggressiv</string>
   <string name="disksize_summary">Versucht die Leistung zu verbessern indem im RAM kleinere Pakete zwischenspeichert werden, anstelle von auf dem Hauptspeicher. Wenn der RAM voll ist werden diese Pakete wieder auf dem Hauptspeicher gespeichert.</string>
   <string name="vibration_strength">Vibrationsstärke</string>
-  <string name="smb135x_wakelock_summary">Verhindert Wakelock, wenn die Stromversorgung getrennt ist.</string>
-  <string name="sensor_ind_wakelock_summary">Verhindert Wakelock, wenn der Inaktivitätsbildschirm deaktiviert ist.</string>
-  <string name="msm_hsic_host_wakelock_summary">Verhindert msm_hsic_host Wakelock.</string>
+  <string name="smb135x_wakelock_summary">Verhindert Wakelocks, wenn die Stromversorgung getrennt ist.</string>
+  <string name="sensor_ind_wakelock_summary">Verhindert Wakelocks, wenn der Inaktivitätsbildschirm deaktiviert ist.</string>
+  <string name="msm_hsic_host_wakelock_summary">Verhindert msm_hsic_host Wakelocks.</string>
   <string name="android_logger">Android-Protokollierung</string>
-  <string name="dynamic_fsync">Dynamischer Fsync</string>
+  <string name="dynamic_fsync">Dynamischer FSync</string>
   <string name="tcp">TCP Congestion-Algorithmus</string>
   <string name="edit">Bearbeiten</string>
   <string name="delete">Löschen</string>
@@ -284,9 +285,9 @@
   <string name="dark_theme">Dunkles Design</string>
   <string name="force_english_language">Englische Sprache erzwingen</string>
   <string name="beta_info">Beta-Informationen</string>
-  <string name="beta_info_summary">Zeige ein Dialogfeld beim Start, wenn sie eine Beta-Version verwenden.</string>
+  <string name="beta_info_summary">Zeigt ein Dialogfeld beim Start, wenn eine Beta-Version verwendet wird.</string>
   <string name="notification">Benachrichtigung</string>
-  <string name="notification_summary">Zeige eine Benachrichtigung wenn \"Anwenden beim Boot\" gestartet wird. Bitte deaktivieren Sie dies, wenn es zu Problemen kommt.</string>
+  <string name="notification_summary">Zeige eine Benachrichtigung wenn \"Anwenden beim Boot\" gestartet wird. Bitte deaktivieren falls es zu Problemen kommt.</string>
   <string name="show_toast">Toast-Benachrichtigungen anzeigen</string>
   <string name="test">Test</string>
   <string name="test_summary">Teste \"Anwenden beim Boot\" mit Verzögerung. Wenn nichts geschieht, existieren keine gespeicherten Einstellungen.</string>
@@ -303,9 +304,9 @@
   <string name="cpu_freq_not_sticking">Warum bleibt meine eingestellte CPU-Frequenz nicht bestehen?</string>
   <string name="cpu_freq_not_sticking_summary">Dies hat mehrere Gründe. Viele Kernel haben heutzutage ihre eigenen Hotplug-Systeme, die die CPU-Frequenz steuern und CyanogenMod hat eigene CPU-Boost Implementierungen, die die Frequenz steuern. Ich empfehle, dass Sie die CPU-Frequenzen nicht verändern und diese Aufgabe dem Kernel überlassen.</string>
   <string name="feature_not_appearing">Warum werden einige Funktionen nicht angezeigt?</string>
-  <string name="feature_not_appearing_summary">Einstellmöglichkeiten sind Kernel abhängig.</string>
-  <string name="feature_function">Was macht Einstellung \"X\"?</string>
-  <string name="feature_function_summary">Wenn Sie nicht wissen, was diese Einstellung tut, verändern Sie es auch nicht. Informieren Sie sich vorher gut, bevor Sie mit Ihrer teuren Hardware experimentieren.</string>
+  <string name="feature_not_appearing_summary">Die Einstellmöglichkeiten sind vom Kernel abhängig.</string>
+  <string name="feature_function">Was macht die Einstellung \"X\"?</string>
+  <string name="feature_function_summary">Wenn Sie nicht wissen, was diese Einstellung tut, verändern Sie diese auch nicht. Informieren Sie sich vorher gut, bevor Sie mit Ihrer teuren Hardware experimentieren.</string>
   <string name="add_new_features">Kannst du Funktion x und y hinzufügen?</string>
   <string name="add_new_features_summary">Das ist schwer zu sagen. Ich versuche, alle Funktionen hinzuzufügen, aber es ist schwer, diese App universal für alle Geräte machen. Ich habe nur ein Samsung Galaxy S4 (I9500) und ein HTC Desire 816, also bitte keine Beschwerden, wenn Funktionen nicht sofort eingebaut werden.</string>
   <string name="license">Lizenz</string>
@@ -320,11 +321,11 @@
   <string name="open_source">Open Source</string>
   <string name="open_source_summary">Der Quellcode dieser App ist offen und kann auf meinem GitHub Account gefunden werden.</string>
   <string name="feature_request">Funktionsanfrage</string>
-  <string name="feature_request_summary">Willst du mehr Features? Öffne einen \"Issue\" auf GitHub und erzähl mir von deiner Idee.</string>
+  <string name="feature_request_summary">Willst du mehr Funktionen? Öffne einen \"Issue\" auf GitHub und erzähl mir von deiner Idee.</string>
   <string name="google_plus">Google Plus</string>
   <string name="google_plus_summary">Werde Teil unserer Community.</string>
   <string name="donate">Spenden</string>
-  <string name="donate_summary">Ich schreibe diese Anwendung in meiner Freizeit und würde mich sehr über eine kleine, freiwillige Spende freuen. Diese App wird im vollen Funktionsumpfang kostenlos bleiben!</string>
+  <string name="donate_summary">Ich schreibe diese Anwendung in meiner Freizeit und würde mich sehr über eine kleine, freiwillige Spende freuen. Diese App wird in vollem Funktionsumpfang kostenlos bleiben!</string>
   <string name="translation">Übersetzung</string>
   <string name="translation_summary">Hilf mir, diese App zu übersetzen!</string>
 </resources>
