--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -66,7 +66,6 @@
   <string name="initd">Init.d</string>
   <string name="settings">Ajustes</string>
   <string name="faq">FAQ</string>
-  <string name="about_us">Acerca de</string>
   <string name="unused_cpu_states">Frecuencias de CPU no utilizadas</string>
   <string name="uptime">Tiempo de actividad</string>
   <string name="deep_sleep">Sueño profundo</string>
@@ -87,7 +86,6 @@
   <string name="cpu_max_screen_off_freq">Frecuencia máxima del CPU con la pantalla apagada</string>
   <string name="cpu_max_screen_off_freq_summary">Ajustar la frecuencia máxima de la CPU cuando la pantalla está apagada.</string>
   <string name="cpu_governor">Gobernador del CPU</string>
-  <string name="cpu_governor_summary">El gobernador del CPU determina la forma en que el CPU reacciona a los cambios de frecuencia. Cambiar el gobernador repercutirá sobre las frecuencias del CPU a través de las distintas frecuencia disponibles.</string>
   <string name="cpu_governor_tunables">Optimizadores del Gobernador del CPU</string>
   <string name="cpu_governor_tunables_summary">Varios parámetros configurables que dependen del Gobernador.</string>
   <string name="not_tunable">%s no se puede ajustar</string>
@@ -289,6 +287,7 @@
   <string name="gpu_2d_max_freq_summary">Establecer la frecuencia máxima de la GPU 2D.</string>
   <string name="gpu_max_freq">Frecuencia máxima del GPU</string>
   <string name="gpu_max_freq_summary">Establecer la frecuencia máxima del GPU.</string>
+  <string name="gpu_min_freq">Frecuencia mínima del GPU</string>
   <string name="gpu_2d_governor">Gobernador de GPU 2D</string>
   <string name="gpu_2d_governor_summary">Establecer el gobernador del GPU 2D.</string>
   <string name="gpu_governor">Gobernador del GPU</string>
@@ -461,11 +460,9 @@
   <string name="vibration_strength">Intensidad de vibración</string>
   <string name="android_logger">Registro de Android</string>
   <string name="fsync">Fsync</string>
-  <string name="fsync_summary">Desactivar para un mejor rendimiento en el sistema a riesgo de poder perder datos si se bloquea (crash).</string>
   <string name="dynamic_fsync">Fsync dinámico</string>
   <string name="dynamic_fsync_summary">Cuando está activado y la pantalla está activada, la operación fsync es asincrónica. Cuando la pantalla está apagada, esta operación es sincrónica.</string>
   <string name="power_suspend_mode">Modo de suspensión de energía</string>
-  <string name="power_suspend_mode_summary">El Modo Kernel, LCD Hooks y el Highest Level Hook son gestionados por el kernel. Para habilitar o inhabilitar el Modo de SUspensión de Energía, escoga el modo Usuario.</string>
   <string name="autosleep">AutoSuspensión</string>
   <string name="userspace">Espacio de Usuario</string>
   <string name="lcd_panel">Panel LCD</string>
@@ -507,7 +504,6 @@
   <string name="github">Github</string>
   <string name="google_plus">Google+</string>
   <string name="paypal">PayPal</string>
-  <string name="download">Descargar</string>
   <string name="downloading_counting">%1$s/%2$s</string>
   <string name="resume">Renaudar</string>
   <string name="checking_md5">Verificación de MD5sum</string>
@@ -603,7 +599,6 @@
   <string name="misspelled">¿Por qué se escribe incorrectamente «Auditor»?</string>
   <string name="misspelled_summary">Adiutor en latín significa ayudar.</string>
   <string name="cpu_freq_not_sticking">Por que mi frecuencia predeterminada no se guarda?</string>
-  <string name="cpu_freq_not_sticking_summary">Puede ser pormuchas razones. Muchos núcleos en la actualidad tienen su propio sistema hotplugging que controla la frecuencia de la CPU y CyanogenMod tiene su propia implementación de CPU Boost que regulan la frecuencia. Yo sugiero no tocar las frecuencias de la CPU y que el núcleo haga su trabajo.</string>
   <string name="feature_not_appearing">Por que no aparecen algunas características?</string>
   <string name="feature_not_appearing_summary">Las características dependen del kernel.</string>
   <string name="feature_function">Que hace la función x?</string>
@@ -613,10 +608,7 @@
   <string name="license">Licencia</string>
   <string name="app_license">Kernel Adiutor está bajo la licencia Apache, Versión 2.0, y usa siguientes bibliotecas</string>
   <string name="open_source">Código abierto</string>
-  <string name="open_source_summary">Esta aplicación es de código abierto. Revísala en mi GitHub.</string>
   <string name="feature_request">Sugerir una idea</string>
-  <string name="feature_request_summary">¿Quieres más funciones? Abrir un tema nuevo en GitHub y dime tu idea.</string>
   <string name="google_plus_summary">Únete a nuestra comunidad.</string>
   <string name="translation">Traducción</string>
-  <string name="translation_summary">Ayúdame a traducir esta aplicación!</string>
 </resources>
