--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -445,6 +445,8 @@
     <string name="wake_timeout_summary">Set a duration when the wake controls will be disabled after the screen goes off.</string>
     <string name="power_key_suspend">Power Key Suspend</string>
     <string name="power_key_suspend_summary">Enabling this will turn off wake controls when the screen is turned off by the power key.</string>
+    <string name="pocket_mode">Pocket Mode</string>
+    <string name="pocket_mode_summary">Enabling this will turn off wake controls when device in pocket.</string>
 
     <!-- Sound -->
     <string name="sound_control">Sound Control</string>
