Update russian translation (Part 1)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,7 +17,7 @@
   <string name="press_back_again">Нажмите Назад еще раз для выхода</string>
   <string name="more">Ещё</string>
   <string name="thank_you">Спасибо!</string>
-  <string name="heavy_user_message">Похоже, вы действительно нравится это приложение! Спасибо за использование его!</string>
+  <string name="heavy_user_message">Похоже, вы действительно нравится это приложение! Спасибо за его использование!</string>
   <string name="rate_app">Оценить приложение</string>
   <string name="donate">Поддержи меня</string>
   <string name="select_file">Выберите файл</string>
@@ -62,8 +62,8 @@
   <string name="plugins">Плагины</string>
   <string name="backup">Резервная копия</string>
   <string name="build_prop_editor">Редактор Build prop</string>
-  <string name="profile">Профиль</string>
-  <string name="initd">Init.d</string>
+  <string name="profile">Профили</string>
+  <string name="initd">Init.d твики</string>
   <string name="settings">Настройки</string>
   <string name="faq">Часто задаваемые вопросы</string>
   <string name="about_us">О нас</string>
@@ -97,7 +97,7 @@
   <string name="cfs_scheduler_policy">Политика планировщика CFS</string>
   <string name="cfs_scheduler_policy_summary">Система которая решает как использовать распределитель CFS  чтобы распределить различные задачи между CPU блоками.</string>
   <string name="disabled">Отключено</string>
-  <string name="enabled">Вкл</string>
+  <string name="enabled">Включено</string>
   <string name="aggressive">Агрессивный</string>
   <string name="cpu_quiet">CPUQuiet</string>
   <string name="cpu_quiet_summary">CPUQuiet реализует политику по отключению ядер процессора. Данная политика сохраняет заряд батареи без вреда производительности.</string>
@@ -128,11 +128,11 @@
   <string name="profile_summary">Число в скобках указывает количество ядер онлайн в любое время.</string>
   <string name="balanced">Сбалансированный</string>
   <string name="performance">Производительность</string>
-  <string name="conservative">Консервативный</string>
+  <string name="conservative">Энергосберегающий</string>
   <string name="eco_performance">Пониженная производительность</string>
-  <string name="eco_conservative">Пониженный консервативный</string>
+  <string name="eco_conservative">Пониженный энергосберегающий</string>
   <string name="tri">Tri</string>
-  <string name="eco">Эко</string>
+  <string name="eco">Экономия</string>
   <string name="strict">Строгий</string>
   <string name="eco_mode">Эконом режим</string>
   <string name="eco_mode_summary">Режим энегросбережения для IntelliPlug.</string>
@@ -163,7 +163,7 @@
   <string name="blu_plug">Blu_Plug</string>
   <string name="blu_plug_summary">Замена ядра для Qualcomm MPDecision. Разработанная командой Code_Blue.</string>
   <string name="powersaver_mode">Режим энергосбережения</string>
-  <string name="powersaver_mode_summary">Одноядерный режим с макс. частотой 1728 МГц.</string>
+  <string name="powersaver_mode_summary">Одноядерный режим с максимальной частотой 1728 МГц.</string>
   <string name="up_threshold">Высший порог</string>
   <string name="up_threshold_summary">При превышении данного порога загрузки драйвер включит ещё одно ядро CPU.</string>
   <string name="up_timer_cnt">До элемента управления Timer</string>
@@ -359,7 +359,7 @@
   <string name="backlight_dimmer">Уменьшение яркости экрана</string>
   <string name="offset">Смещение</string>
   <string name="negative_toggle">Отрицательный рычаг</string>
-  <string name="negative_toggle_summary">Чтобы Вкл. инвертирование цвета экрана, быстро нажимая кнопку меню 4 раза.</string>
+  <string name="negative_toggle_summary">Чтобы включить инвертирование цвета экрана, быстро нажимая кнопку меню 4 раза.</string>
   <string name="mdnie_global_controls">Управление функцией mDNle</string>
   <string name="register_hook">Зарегистрировать хук</string>
   <string name="register_hook_summary">Перехват регистра действует как средство, позволяющее перехватить настройки сценария и изменить их посредством дельта-управления. Если в базовой последовательности сценария нет настройки (регистра), то изменить его данным средством невозможно.</string>
@@ -386,14 +386,14 @@
   <string name="s2s_right">Сдвинуть вправо</string>
   <string name="s2s_left">Сдвинуть влево</string>
   <string name="s2s_any">Сдвинуть влево или вправо</string>
-  <string name="t2w">Tap2Wake</string>
+  <string name="t2w">Тапните для пробуждения</string>
   <string name="t2w_summary">Пробуждение устройства тапом по экрану.</string>
   <string name="wake">Пробуждение</string>
-  <string name="dt2w_charging">Пробуждение по дв. тапу во время зарядки</string>
+  <string name="dt2w_charging">Пробуждение по двойному тапу во время зарядки</string>
   <string name="s2w_charging">Sweep2Wake во время зарядки</string>
   <string name="dt2w_s2w_charging">DoubleTap2Wake + Sweep2Wake во время зарядки</string>
   <string name="sleep">Сон</string>
-  <string name="dt2s">DoubleTap2Sleep</string>
+  <string name="dt2s">Двойной Тап для Сна</string>
   <string name="dt2s_summary">Блокируйте устройство двойным касанием в верхней части экрана.</string>
   <string name="slide_up">Сдвиг вверх</string>
   <string name="slide_down">Сдвиг вниз</string>
@@ -439,7 +439,7 @@
   <string name="ksm_pages_sharing">Страницы которыми делитесь</string>
   <string name="ksm_pages_unshared">Страницы которыми не поделились</string>
   <string name="ksm_pages_volatile">Необъединяемые страницы</string>
-  <string name="ksm_enable">Включить KSM</string>
+  <string name="ksm_enable">Включить объединенную память(KSM)</string>
   <string name="ksm_enable_summary">Уменьшает потребление памяти, но увеличивает загрузку CPU.</string>
   <string name="ksm_pages_to_scan">Страниц для сканирования</string>
   <string name="ksm_sleep_milliseconds">Спать между операциями сканирования</string>
