--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,13 +8,13 @@
   <string name="ok">Хорошо</string>
   <string name="cancel">Отмена</string>
   <string name="current_value_not_supported">Данное значение не поддерживается</string>
-  <string name="beta_message">Спасибо, что стали тестером! Если у Вас какие-то проблемы, не стесняйтесь написать мне. Текущая версия %s.</string>
+  <string name="beta_message">Спасибо, что стали тестером! Если у Вас возникли какие-то проблемы, не стесняйтесь написать мне. Текущая версия %s.</string>
   <string name="select_picture">Выберите изображение</string>
   <string name="no_picture">Нет картинки</string>
   <string name="went_wrong">Что-то пошло не так!</string>
   <string name="password">Пароль</string>
   <string name="password_wrong">Неверный пароль</string>
-  <string name="press_back_again">Нажмите Назад еще раз для выхода</string>
+  <string name="press_back_again">Нажмите назад еще раз для выхода</string>
   <string name="more">Ещё</string>
   <string name="thank_you">Спасибо!</string>
   <string name="heavy_user_message">Похоже, вы действительно нравится это приложение! Спасибо за его использование!</string>
@@ -115,7 +115,7 @@
   <string name="input_boost_freq_core">Ускорение ввода частоты ядра %s</string>
   <string name="input_boost_freq_summary">Значение, до которого будет повышена частота процессора при регистрации ввода.</string>
   <string name="wakeup_boost">Усиление пробуждения</string>
-  <string name="wakeup_boost_summary">Wakeup Boost схож с input boost,  но срабатывает при включенном экране</string>
+  <string name="wakeup_boost_summary">Wakeup Boost схож с input boost, но срабатывает при включенном экране</string>
   <string name="hotplug_boost">Ускорение горячего подключения</string>
   <string name="hotplug_boost_summary">Ускорение горячего подключения похоже на ускорение ввода, но срабатывает при работе процессора онлайн.</string>
   <string name="global_offset">Глобальное смещение</string>
@@ -131,7 +131,7 @@
   <string name="conservative">Энергосберегающий</string>
   <string name="eco_performance">Пониженная производительность</string>
   <string name="eco_conservative">Пониженный энергосберегающий</string>
-  <string name="tri">Tri</string>
+  <string name="tri">Три</string>
   <string name="eco">Экономия</string>
   <string name="strict">Строгий</string>
   <string name="eco_mode">Эконом режим</string>
@@ -146,7 +146,7 @@
   <string name="suspend">Приостановить</string>
   <string name="suspend_summary">Предотвратить приостановить.</string>
   <string name="cpus_boosted">Количество ускоренных ядер ЦП</string>
-  <string name="cpus_boosted_summary">Макс. количество одновременно ускоренных ядер ЦП.</string>
+  <string name="cpus_boosted_summary">Максимальное количество одновременно ускоренных ядер ЦП.</string>
   <string name="min_cpu_online">Минимальное количество работающих ядер</string>
   <string name="min_cpu_online_summary">Минимальное количество ядер процессора которые будут всегда включены </string>
   <string name="max_cpu_online">Максимальное количество работающих ядер</string>
@@ -171,7 +171,7 @@
   <string name="down_timer_cnt">Обратный отсчет</string>
   <string name="down_timer_cnt_summary">Управление таймером понижения частоты процессора.</string>
   <string name="msm_hotplug">МСМ Hotplug</string>
-  <string name="msm_hotplug_summary">Замена ядра для Qualcomm MPDecision. Разработанный myfluxi.</string>
+  <string name="msm_hotplug_summary">Замена ядра для Qualcomm MPDecision, разработанная myfluxi.</string>
   <string name="history_size">Размер истории</string>
   <string name="history_size_summary">Number of samples taken in consideration for average load across CPUs. Lower means quicker/more erratic.</string>
   <string name="update_rate">Частота обновления</string>
@@ -186,7 +186,7 @@
   <string name="io_is_busy_summary">Используется для изготовления hotplug считают время ввода-вывода, как время загрузки процессора.</string>
   <string name="defer_time">Приостановить отложить время</string>
   <string name="mako_hotplug">Мако Hotplug</string>
-  <string name="mako_hotplug_summary">Замена ядра для Qualcomm MPDecision. Разработанный franciscofranco.</string>
+  <string name="mako_hotplug_summary">Замена ядра для Qualcomm MPDecision, разработанная franciscofranco.</string>
   <string name="cores_on_touch">Ядра при касании</string>
   <string name="cores_on_touch_summary">Количество задействованных ядер процессора отрабатывающих прикосновения к экрану или нажатий кнопок.</string>
   <string name="cpu_freq_unplug_limit">Частота процессора отключите ограничение</string>
@@ -212,18 +212,18 @@
   <string name="start_delay_summary">Время до работы контроля ядра.</string>
   <string name="delay">Задержка</string>
   <string name="delay_summary">Время между регестрированием проверки.</string>
-  <string name="pause">пауза</string>
-  <string name="pause_summary">Если что-то вмешивается в работу ЦП, то отключить контроль на данное время.</string>
+  <string name="pause">Пауза</string>
+  <string name="pause_summary">Если что-то вмешивается в работу ЦП, то отключите контроль на некоторое время.</string>
   <string name="alucard_hotplug">Alucard контроль</string>
   <string name="alucard_hotplug_summary">Замена ядра для Qualcomm MPDecision.</string>
   <string name="sampling_rate">Частота дискретизации</string>
   <string name="cpu_down_rate">Уменьшить Скорость процессора.</string>
   <string name="cpu_up_rate">Увеличить Скорость процессора.</string>
   <string name="thunderplug">Thunderplug контроль</string>
-  <string name="thunderplug_summary">Замена для Qualcomm\'s MPDecision. Разработана varunchitre15.</string>
+  <string name="thunderplug_summary">Замена для Qualcomm\'s MPDecision, разработанная varunchitre15.</string>
   <string name="min_cores_screen_off">Мин кол-во ядер при выкл. экране</string>
-  <string name="min_cores_screen_off_summary">Мин кол-во ядер когда экран выключен.</string>
-  <string name="endurance_level">Уровень стойкости</string>
+  <string name="min_cores_screen_off_summary">Минимальное кол-во ядер когда экран выключен.</string>
+  <string name="endurance_level">Уровень энергосбережения</string>
   <string name="endurance_level_summary">Энергосберегающий профиль.</string>
   <string name="quad_core_mode">Четырёх-ядерный режим</string>
   <string name="dual_core_mode">Двух-ядерный режим</string>
@@ -232,20 +232,20 @@
   <string name="wake_wait_time">Время ожидания пробуждения</string>
   <string name="wake_wait_time_summary">Как долго ждать перед включением любого ядра.</string>
   <string name="bat_threshold_ignore">Игнорировать порог батарея</string>
-  <string name="bat_threshold_ignore_summary">Не включайте любой ядер, когда заряд ниже выбранной мощности.</string>
+  <string name="bat_threshold_ignore_summary">Не включать любое ядро, когда заряд ниже выбранной мощности.</string>
   <string name="autosmp">АвтоSMP</string>
-  <string name="autosmp_summary">Замена ядра для Qualcomm MPDecision. Разработанный mrg666.</string>
+  <string name="autosmp_summary">Замена ядра для Qualcomm MPDecision, разработанная mrg666.</string>
   <string name="downrate_limits">Ограничения понижения</string>
   <string name="uprate_limits">Ограничения повышения</string>
-  <string name="cycle_down">Цикла вниз</string>
+  <string name="cycle_down">Цикл вниз</string>
   <string name="cycle_down_summary">Количество циклов после последнего события hotplug до отключения следующего ядра.</string>
   <string name="cycle_up">Цикл вверх</string>
   <string name="cycle_up_summary">Циклы ожидания после последнего события hotplug подключить другое ядро.</string>
   <string name="thermal_info">Используйте только один драйвер из представленных вариантов, использование более одного за раз может привести к непредсказуемым последствиям.</string>
-  <string name="thermald">Thermald</string>
+  <string name="thermald">Термальный драйвер</string>
   <string name="thermald_summary">Стоковый термальный драйвер, который предотвращает перегрев. Должен быть отключен, если ядро имеет альтернативу.</string>
   <string name="intellithermal">Intellithermal</string>
-  <string name="intellithermal_summary">Замена стандартного контроля температур от Qualcomm. Разработано faux123.</string>
+  <string name="intellithermal_summary">Замена стандартного контроля температур от Qualcomm, разработанная faux123.</string>
   <string name="intellithermal_optimized">Intellithermal оптимизация</string>
   <string name="intellithermal_optimized_summary">Улучшенная замена стандартного контроля температур от Qualcomm. Разработано faux123 и alucard_24.</string>
   <string name="debug_mask_thermal">Позволяет активировать маску отладки для тепловых операций.</string>
@@ -389,9 +389,9 @@
   <string name="t2w">Тапните для пробуждения</string>
   <string name="t2w_summary">Пробуждение устройства тапом по экрану.</string>
   <string name="wake">Пробуждение</string>
-  <string name="dt2w_charging">Пробуждение по двойному тапу во время зарядки</string>
+  <string name="dt2w_charging">Пробуждение двойным тапом во время зарядки</string>
   <string name="s2w_charging">Sweep2Wake во время зарядки</string>
-  <string name="dt2w_s2w_charging">DoubleTap2Wake + Sweep2Wake во время зарядки</string>
+  <string name="dt2w_s2w_charging">Пробуждение двойным тапом + Sweep2Wake во время зарядки</string>
   <string name="sleep">Сон</string>
   <string name="dt2s">Двойной Тап для Сна</string>
   <string name="dt2s_summary">Блокируйте устройство двойным тапом в верхней части экрана.</string>
