CPU: MSM_Limiter
Add better support for MSM_Limiter.

This commit hides various sections based on the status of msm_limiter and allows limiter to be controlled per core or all at once.

The per core option will be set/read from the app preferences.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="current_freq">Current Frequency</string>
     <string name="core">Core %d</string>
     <string name="offline">Offline</string>
+    <string name="cpu_per_core_control">Enable Per Core Control</string>
     <string name="cpu_max_freq">CPU Maximum Frequency</string>
     <string name="cpu_max_freq_summary">Set the maximum frequency the CPU scales up to.</string>
     <string name="cpu_min_freq">CPU Minimum Frequency</string>
@@ -144,6 +145,22 @@
     <string name="wakeup_boost_summary">Wakeup Boost is similar to input boost but it occurs when screen is turned on.</string>
     <string name="hotplug_boost">Hotplug Boost</string>
     <string name="hotplug_boost_summary">Hotplug Boost is similar to input boost but it occurs when CPUs go online.</string>
+    <string name="cpu_msm_limiter">MSM Limiter</string>
+    <string name="cpu_msm_limiter_summary">Enable MSM Limiter</string>
+    <string name="cpu_msm_limiter_resume_max">Max Frequency</string>
+    <string name="cpu_msm_limiter_resume_max_summary">Set the maximum frequency all CPUs scales up to.</string>
+    <string name="cpu_msm_limiter_resume_max_summary_per_core">Set the maximum frequency each CPU scales up to.</string>
+    <string name="cpu_msm_limiter_suspend_min">Min Frequency</string>
+    <string name="cpu_msm_limiter_suspend_min_summary">Set the minimum frequency all CPUs scales down to.</string>
+    <string name="cpu_msm_limiter_suspend_min_summary_per_core">Set the minimum frequency each CPU scales down to.</string>
+    <string name="cpu_msm_limiter_suspend_max">Suspend Max Frequency</string>
+    <string name="cpu_msm_limiter_suspend_max_summary">Set the maximum frequency all CPUs scales up to when device is suspended.</string>
+    <string name="cpu_msm_limiter_resume_max_per_core">CPU %d: Maximum Frequency</string>
+    <string name="cpu_msm_limiter_suspend_min_per_core">CPU %d: Minimum Frequency</string>
+    <string name="cpu_msm_limiter_governor_per_core">CPU %d: Governor</string>
+    <string name="cpu_governor_tunables_per_core_header">Edit Tunables for each core\'s Governor</string>
+    <string name="cpu_governor_tunables_per_core_summary">The various configuration items which are Governor-dependent. Note that if a Governor is selected for multiple cores, it\'s tunables are shared and are not customizable for each core. When they\'re changed for one core below the changes will reflect in the other cores that utilize it.</string>
+    <string name="cpu_governor_tunables_per_core_tunable">Core %d tuneables. Governor:</string>
 
     <!-- CPU Voltage -->
     <string name="global_offset">Global Offset</string>
