intelliplug:profile_summary Fix the parentheses indicates the amount of cores
there is no parenthesis next to profiles
The default profiles amount of cores are:
Strict (1)
Eco (2)
Tri (3)
Balanced (4)
Performance (4)
Conservative (4)

Signed-off-by: BHB27 <fglfgl27@gmail@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,15 +157,15 @@
     <string name="intelliplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by faux123.</string>
     <string name="profile_summary">The number in the parentheses indicates the amount of cores online at any time.</string>
     <string name="insanity">InSaNiTy</string>
-    <string name="balanced">Balanced</string>
-    <string name="performance">Performance</string>
-    <string name="conservative">Conservative</string>
+    <string name="balanced">Balanced (4)</string>
+    <string name="performance">Performance (4)</string>
+    <string name="conservative">Conservative (4)</string>
     <string name="eco_insanity">Eco InSaNiTy</string>
     <string name="eco_performance">Eco Performance</string>
     <string name="eco_conservative">Eco Conservative</string>
-    <string name="tri">Tri</string>
-    <string name="eco">Eco</string>
-    <string name="strict">Strict</string>
+    <string name="tri">Tri (3)</string>
+    <string name="eco">Eco (2)</string>
+    <string name="strict">Strict (1)</string>
     <string name="eco_mode">Eco Mode</string>
     <string name="eco_mode_summary">Battery saving mode for IntelliPlug.</string>
     <string name="touch_boost">Touch Boost</string>
